# Controle_PI_Temperatura_Servo_Motor_EmbarcaTech

./: .gitignore  CMakeLists.txt  README.md  demanda.md  index.html  index_comentado.html  main.c
lib/: aht20.c  aht20.h  example.c  lwipopts.h  pico_http_server.c  pico_http_server.h
